--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "firebase": "^9.16.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.16"
   }
 }
