--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/Muhammad_Talha/index.js"
+    "dev": "nodemon src/index.js"
   },
   "author": "Yasir",
   "license": "ISC",
