--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "author": "Yasir",
   "license": "ISC",
   "dependencies": {
-    "@types/firebase": "^3.2.1",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^9.16.0",
-    "firebase-admin": "^11.5.0"
+    "firebase-admin": "^11.5.0",
+    "nodemon": "^2.0.22"
   },
   "devDependencies": {
     "@types/express": "^4.17.16"
